<resources>
    <string name="app_name">Dissertation</string>
    <string name="method1">Method 1: \n The method of formation restrictions for logs</string>
    <string name="method2">Method 2:\n The method of  log analyze of base date</string>
    <string name="get_log_from_file_system">  >>> Get log from file system </string>
    <string name="sign_out">Sign out</string>
    <string name="set_end_event">Set end event:</string>
    <string name="sign_in">Sign in</string>
    <string name="set_start_event">Set start event:</string>
    <string name="log_name">Log name</string>
    <string name="log_name_mock">Development cycle</string>
    <string name="events_count">Events count:</string>
    <string name="events_count_mock">32152</string>
    <string name="filtered_events_count_mock">235</string>
    <string name="starts_from">Starts from:</string>
    <string name="starts_on_mock">8:35 AM 01/06/2014</string>
    <string name="ends_on">Ends on:</string>
    <string name="ends_on_mock">11:55 AM 23/03/2015</string>
    <string name="file_size">File size:</string>
    <string name="file_size_mock">12,5 Mb</string>
    <string name="file_last_modified">Last modified:</string>
    <string name="file_last_modified_mock">11:55 AM 23/03/2015</string>
    <string name="process_found">Process found:</string>
    <string name="process_found_mock">No process was found</string>
    <string name="process_count">Process count</string>
    <string name="process_count_mock">@string/empty_string</string>
    <string name="next">next  >>></string>
    <string name="object_analyze_descr">Object analyze could be used to describe technical processes of IS. Allows user to find bottlenecks in processes of ITS related to objects, dependencies between objects, fluence of each objects on process.</string>
    <string name="user_analyze_descr">User analyze could be used to describe social net of IS. Allows user to find bottlenecks in processes of ITS related to users, dependencies between users, users\' hierarchy, fluence of user on process.</string>
    <string name="object_user_analyze_descr">Object|User analyze could be used to describe technical processes of IS under users\' interactions. Allow user to apply more filters fir analyze and so on.</string>
    <string name="click_to_analyze_only_objects"> > Click to analyze only objects</string>
    <string name="click_to_analyze_only_users"> > Click to analyze only users</string>
    <string name="click_to_analyze_both_objects_and_users"> > Click to analyze both objects and users</string>
    <string name="analyze_objects_of_is">Analyze objects of IS</string>
    <string name="select_departments">Select one or few departments:</string>
    <string name="select_departments_mock">Management; QA; \nProcessOwners</string>
    <string name="select_objects">Select separate objects:"</string>
    <string name="selected_objects_mock">@string/empty_string</string>
    <string name="upload_knowledges_from_file_system">Upload \nknowledges</string>
    <string name="uploaded_knowledges">Uploaded \nknowledges</string>
    <string name="uploaded_knowledges_mock">@string/empty_string</string>
    <string name="empty_string">---------------------</string>
    <string name="formation_result">Knowledge search results table</string>
    <string name="relations_count">Events relations:</string>
    <string name="max_rule_length_mock">10</string>
    <string name="founded_processes">Founded processes:</string>
    <string name="min_rule_length_mock">2</string>
    <string name="export_results">Export search results</string>
    <string name="save_lof_in_open_xes">Save structured log in openXES format</string>
    <string name="which_strcut_element_use">Which strcut element use</string>
</resources>
