<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/set_start_event"
            android:textSize="16sp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/sign_in" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/set_end_event"
            android:textSize="16sp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/sign_out"
            android:id="@+id/editText" />
    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/get_log_from_file_system" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="5">

        <TextView
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/log_name"
            android:textSize="16sp" />

        <TextView
            android:layout_height="48dp"
            android:layout_gravity="fill_horizontal"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/log_name_mock"
            android:textSize="16sp" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/process_found"
            android:textSize="16sp" />

        <TextView
            android:layout_height="48dp"
            android:layout_gravity="fill_horizontal"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/process_found_mock"
            android:textSize="16sp" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/process_count"
            android:textSize="16sp" />

        <TextView
            android:layout_height="48dp"
            android:layout_gravity="fill_horizontal"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/process_count_mock"
            android:textSize="16sp" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/events_count"
            android:textSize="16sp" />

        <TextView
            android:layout_height="48dp"
            android:layout_gravity="fill_horizontal"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/filtered_events_count_mock"
            android:textSize="16sp" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/starts_from"
            android:textSize="16sp" />

        <TextView
            android:layout_height="48dp"
            android:layout_gravity="fill_horizontal"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/starts_on_mock"
            android:textSize="16sp" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/ends_on"
            android:textSize="16sp" />

        <TextView
            android:layout_height="48dp"
            android:layout_gravity="fill_horizontal"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/ends_on_mock"
            android:textSize="16sp" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/file_size"
            android:textSize="16sp" />

        <TextView
            android:layout_height="48dp"
            android:layout_gravity="fill_horizontal"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/file_size_mock"
            android:textSize="16sp" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/file_last_modified"
            android:textSize="16sp" />

        <TextView
            android:layout_height="48dp"
            android:layout_gravity="fill_horizontal"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/file_last_modified_mock"
            android:textSize="16sp" />
    </GridLayout>

    <Button
        android:id="@+id/button_next"
        android:layout_width="144dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:layout_gravity="right"
        android:gravity="center"
        android:text="@string/next" />
</LinearLayout>