<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/analyze_objects_of_is"
        android:textSize="24sp"
        android:textStyle="bold|italic" />


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="5">


        <TextView
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/select_departments"
            android:textSize="16sp" />

        <TextView
            android:layout_height="48dp"
            android:layout_gravity="fill_horizontal"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/select_departments_mock"
            android:textSize="16sp" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/select_objects"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_height="48dp"
            android:layout_gravity="fill_horizontal"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/selected_objects_mock"
            android:textSize="16sp" />

        <Button
            android:layout_columnSpan="2"
            android:layout_gravity="fill"
            android:text="@string/upload_knowledges_from_file_system"
            />

        <TextView
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/uploaded_knowledges"
            android:textSize="16sp"
            android:layout_marginBottom="32dp"
            />

        <TextView
            android:layout_height="48dp"
            android:layout_gravity="fill_horizontal"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/uploaded_knowledges_mock"
            android:textSize="16sp" />

        <TextView
            android:layout_columnSpan="2"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/formation_result"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            android:layout_gravity="center_horizontal"/>

        <ImageView
            android:layout_columnSpan="2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/events_count"
            android:textSize="16sp" />

        <TextView
            android:layout_height="48dp"
            android:layout_gravity="fill_horizontal|right"
            android:gravity="right|center_vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/filtered_events_count_mock"
            android:textSize="16sp" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/relations_count"
            android:textSize="16sp" />

        <TextView
            android:layout_height="48dp"
            android:layout_gravity="fill_horizontal"
            android:gravity="right|center_vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/relations_count_mock"
            android:textSize="16sp" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/founded_processes"
            android:textSize="16sp" />

        <TextView
            android:layout_height="48dp"
            android:layout_gravity="fill_horizontal"
            android:gravity="center_vertical|right"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/founded_processes_mock"
            android:textSize="16sp" />
 </GridLayout>

    <Button
        android:layout_height="48dp"
        android:layout_width="wrap_content"
        android:layout_gravity="right"
        android:text="@string/export_results"
        />
</LinearLayout>