<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="Choose your strategy"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <include layout="@layout/divider" />

    <TextView
        android:id="@+id/object_analyze"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:text="@string/click_to_analyze_only_objects"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingLeft="32dp"
        android:paddingTop="8dp"
        android:text="@string/object_analyze_descr"
        android:textSize="16sp"
        android:textStyle="italic" />

    <include layout="@layout/divider" />

    <TextView
        android:id="@+id/user_analyze"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:text="@string/click_to_analyze_only_users"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingLeft="32dp"
        android:paddingTop="8dp"
        android:text="@string/user_analyze_descr"
        android:textSize="16sp"
        android:textStyle="italic" />

    <include layout="@layout/divider" />

    <TextView
        android:id="@+id/object_users_analyze"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:text="@string/click_to_analyze_both_objects_and_users"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingLeft="32dp"
        android:paddingTop="8dp"
        android:text="@string/object_user_analyze_descr"
        android:textSize="16sp"
        android:textStyle="italic" />

    <include layout="@layout/divider" />

</LinearLayout>