<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/get_file_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/get_log_from_file_system" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="5">

        <TextView
            android:id="@+id/log_name"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/log_name"
            android:textSize="16sp" />

        <TextView
            android:layout_height="48dp"
            android:layout_gravity="fill_horizontal"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/log_name_mock"
            android:textSize="16sp" />


        <TextView
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/file_size"
            android:textSize="16sp" />

        <TextView
            android:layout_height="48dp"
            android:layout_gravity="fill_horizontal"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/file_size_mock"
            android:textSize="16sp" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/file_last_modified"
            android:textSize="16sp" />

        <TextView
            android:layout_height="48dp"
            android:layout_gravity="fill_horizontal"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/file_last_modified_mock"
            android:textSize="16sp" />
    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="Element separator"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/elementSeparatorSymb"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="fill_horizontal"
            android:gravity="center"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text=";"
            android:textSize="16sp" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="Line Separator"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/lineSeparatorSymb"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="fill_horizontal"
            android:gravity="center"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="/n"
            android:textSize="16sp" />


    </LinearLayout>

    <Button
        android:id="@+id/button_parse"
        android:layout_width="144dp"
        android:layout_height="48dp"
        android:layout_gravity="right"
        android:gravity="center"
        android:text="Parse" />

    <include layout="@layout/divider" />

    <include layout="@layout/progress" />

        <HorizontalScrollView
            android:id="@+id/horizontalView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <ListView
                android:id="@+id/rawLogView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </HorizontalScrollView>

    <include layout="@layout/divider" />

    <Button
        android:id="@+id/button_next"
        android:layout_width="144dp"
        android:layout_height="48dp"
        android:layout_gravity="right"
        android:gravity="center"
        android:text="@string/next" />
</LinearLayout>